--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "poncelet-fives",
+	"homepage": "https://munozu.github.io/poncelet-fives",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "p5": "^1.1.9",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-p5": "^1.3.6",
     "react-scripts": "3.4.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+	},
+	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -b main -d build",
+		"start": "react-scripts start",
+		"build": "react-scripts build"
+	},
   "eslintConfig": {
     "extends": "react-app"
   },
